--- a/app/src/main/res/layout/activity_leto.xml
+++ b/app/src/main/res/layout/activity_leto.xml
@@ -6,15 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".LetoActivity">
 
+    <LinearLayout
+        android:id="@+id/count_container_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/add_ball_btn"
+        app:layout_constraintTop_toBottomOf="@+id/count_container_view" />
 
     <Button
         android:id="@+id/add_ball_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="16dp"
         android:text="添加"
