--- a/app/src/main/res/layout/add_ball_item_layout.xml
+++ b/app/src/main/res/layout/add_ball_item_layout.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="50dp"
+    android:layout_height="50dp"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_view"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/red_ball_bg_shape"
+        android:background="@drawable/default_ball_bg_shape"
         android:gravity="center"
         android:text="1"
-        android:textColor="#ffffff"
+        android:textColor="#F44336"
         android:textSize="16dp"
         android:textStyle="bold" />
 </LinearLayout>
