--- a/app/src/main/res/layout/add_leto_dialog.xml
+++ b/app/src/main/res/layout/add_leto_dialog.xml
@@ -1,29 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/red_ball_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/blue_ball_recycler_view"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/red_ball_recycler_view"
-        android:layout_marginTop="16dp" />
+        android:orientation="vertical"
+        android:paddingBottom="16dp">
 
-    <Button
-        android:id="@+id/add_btn_confirm_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/blue_ball_recycler_view"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="16dp"
-        android:alpha="0.2"
-        android:background="@drawable/red_ball_bg_shape"
-        android:text="确定" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/red_ball_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/blue_ball_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/red_ball_recycler_view" />
+
+        <Button
+            android:id="@+id/add_btn_confirm_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:alpha="0.5"
+            android:background="@drawable/default_ball_bg_shape"
+            android:clickable="false"
+            android:text="确定"
+            app:layout_constraintEnd_toStartOf="@+id/random_num_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/blue_ball_recycler_view" />
+
+
+        <Button
+            android:id="@+id/random_num_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/default_ball_bg_shape"
+            android:text="随机"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/add_btn_confirm_btn"
+            app:layout_constraintTop_toTopOf="@+id/add_btn_confirm_btn" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
