--- a/app/src/main/res/layout/leto_list_item.xml
+++ b/app/src/main/res/layout/leto_list_item.xml
@@ -1,85 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.demo.kotlin.view.swipemenulib.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_item"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/red_tv_1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/red_ball_bg_shape"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="16dp"
-        android:text="1"
-        android:textColor="#ffffff" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/red_tv_1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/red_ball_bg_shape"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/red_tv_2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/red_ball_bg_shape"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/red_tv_3"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/red_ball_bg_shape"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/red_tv_4"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/red_ball_bg_shape"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/red_tv_5"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/red_ball_bg_shape"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/blue_tv_1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/blue_ball_bg_shape"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/blue_tv_2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/blue_ball_bg_shape"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="#ffffff"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/red_tv_2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/red_ball_bg_shape"
+        android:id="@+id/edit_ball_btn"
+        android:layout_width="90dp"
+        android:layout_height="match_parent"
+        android:background="#8BC34A"
+        android:clickable="true"
         android:gravity="center"
+        android:text="编辑"
         android:textStyle="bold"
-        android:textSize="16dp"
-        android:text="1"
-        android:textColor="#ffffff" />
+        android:textColor="@android:color/white"
+        android:textSize="16dp" />
 
     <TextView
-        android:id="@+id/red_tv_3"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:textStyle="bold"
-        android:textSize="16dp"
-        android:background="@drawable/red_ball_bg_shape"
-        android:gravity="center"
-        android:text="1"
-        android:textColor="#ffffff" />
-
-    <TextView
-        android:id="@+id/red_tv_4"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:textStyle="bold"
-        android:textSize="16dp"
-        android:background="@drawable/red_ball_bg_shape"
-        android:gravity="center"
-        android:text="1"
-        android:textColor="#ffffff" />
-
-    <TextView
-        android:id="@+id/red_tv_5"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/red_ball_bg_shape"
-        android:gravity="center"
-        android:text="1"
-        android:textStyle="bold"
-        android:textSize="16dp"
-        android:textColor="#ffffff" />
-
-    <TextView
-        android:id="@+id/blue_tv_1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/blue_ball_bg_shape"
+        android:id="@+id/delete_ball_btn"
+        android:layout_width="90dp"
+        android:layout_height="match_parent"
+        android:background="#E91E63"
         android:gravity="center"
         android:textStyle="bold"
-        android:textSize="16dp"
-        android:text="1"
-        android:textColor="#ffffff" />
-
-    <TextView
-        android:id="@+id/blue_tv_2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/blue_ball_bg_shape"
-        android:gravity="center"
-        android:text="1"
-        android:textStyle="bold"
-        android:textSize="16dp"
-        android:textColor="#ffffff" />
-
-</LinearLayout>
+        android:text="删除"
+        android:textColor="@android:color/white"
+        android:textSize="16dp" />
+</com.demo.kotlin.view.swipemenulib.SwipeMenuLayout>
