--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="fragment1_color">#FF0000</color>
+    <color name="fragment2_color">#00FF00</color>
+    <color name="fragment3_color">#0000FF</color>
+    <!-- 定义其他颜色 -->
+
+
 </resources>
